--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>Propiedades</h1>
 <button [disabled]="btnDisabled">Enviar</button>
-<input type="text" [value]="name">
-<progress max="100" [value]="age"></progress>
-<img width="100" [src] ="img" alt="">
+<input type="text" [value]="person.name">
+<progress max="100" [value]="person.age"></progress>
+<img width="100" [src] ="person. avatar" alt="">
 <hr/>
 <h1>HOLA MUNDO</h1>
 <H2>{{'Hola Mundo'.repeat(5)}}</H2>
